--- a/report/Makefile
+++ b/report/Makefile
@@ -3,6 +3,7 @@ report.pdf: thesis.tex chapters/*.tex thesis.bib
 	pdflatex thesis
 	biber thesis
 	pdflatex thesis
+	pdflatex thesis
 
 clean:
 	rm *.aux *.bbl *.bcf *.blg *.log *.pdf *.xml *.toc
