migrated to XeLaTeX

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,9 +1,11 @@
 
+LATEX=xelatex
+
 thesis.pdf: $(futuretex) thesis.tex chapters/*.tex thesis.bib
-	pdflatex thesis
+	${LATEX} thesis
 	biber thesis
-	pdflatex thesis
-	pdflatex thesis
+	${LATEX} thesis
+	${LATEX} thesis
 
 lagda=$(wildcard ../src/*.lagda)
 futuretex=$(patsubst ../src/%.lagda,./chapters/%.tex,$(lagda))
@@ -11,7 +13,7 @@ futuretex=$(patsubst ../src/%.lagda,./chapters/%.tex,$(lagda))
 alltex : $(futuretex)
 
 $(futuretex) : chapters/%.tex : ../src/%.lagda
-	cd ../src; agda --latex --latex-dir ../report/chapters $<
+	cd ../src; agda --copatterns --latex --latex-dir ../report/chapters $<
 
 clean:
 	rm *.aux *.bbl *.bcf *.blg *.log *.pdf *.xml *.toc *.ptb
