another font, with :: symbol

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,7 +1,7 @@
 
 LATEX=xelatex
 
-thesis.pdf: $(futuretex) thesis.tex chapters/*.tex thesis.bib
+thesis.pdf: $(futuretex) thesis.tex chapters/*.tex thesis.bib agda.sty
 	${LATEX} thesis
 	biber thesis
 	${LATEX} thesis
@@ -13,7 +13,7 @@ futuretex=$(patsubst ../src/%.lagda,./chapters/%.tex,$(lagda))
 alltex : $(futuretex)
 
 $(futuretex) : chapters/%.tex : ../src/%.lagda
-	cd ../src; agda --copatterns --latex --latex-dir ../report/chapters $<
+	cd ../src; agda --latex --latex-dir ../report/chapters $<
 
 clean:
 	rm *.aux *.bbl *.bcf *.blg *.log *.pdf *.xml *.toc *.ptb
