--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 *.pdf
+*.aux
+*.bbl
+*.log
+*.fls
+*.nav
+*.out
+*.bcf
+*.blg
+*.toc
+*.vrb
+*.snm
+auto/
+*.ptb
+*.agdai
+*.run.xml
+*.fdb_latexmk
+*.swp
